# task-tracker

./: .gitignore  README.md  docker-compose.yml
.github/scripts/: git_get_changed_servises.py
.github/workflows/: check_pipeline.yaml
libraries/rmq_broker/: pyproject.toml
poetry_tools/: create_library.py
services/: README.md  system_diagram.drawio
services/accounting/: README.md  alembic.ini  pyproject.toml
services/accounting/accounting/: app.py  settings.py  tasts.py
services/accounting/accounting/auth/: models.py  schemas.py
services/accounting/accounting/broker/: connection.py
services/accounting/accounting/db/: __init__.py  connection.py  mappings.py  repositories.py  tables.py
services/accounting/accounting/transaction/: models.py  schemas.py  views.py
services/accounting/migrations/: env.py
services/accounting/migrations/versions/: dee416c26fe5_user_and_transaction_tables.py
services/api_gateway/: Dockerfile  README.md  krakend.json
services/api_gateway/data/: config3.json
services/auth/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
services/auth/auth/: app.py  models.py  schemas.py  settings.py  views.py
services/auth/auth/broker/: connection.py  events.py
services/auth/auth/db/: connection.py  repositories.py  tables.py
services/auth/auth/services/: token.py  user.py
services/auth/migrations/: env.py
services/auth/migrations/versions/: 5be76dc8e174_user_and_roles_tables.py
services/auth/tests/: conftest.py
services/auth/tests/test_db/: test_mappers.py
services/front/: Dockerfile  package-lock.json  package.json
services/front/nginx/: default.conf
services/front/src/: App.vue  main.js  quasar-user-options.js
services/front/src/components/: DataProvider.js  ErrorAlert.vue  TaskCreate.vue  TaskItem.vue
services/front/src/router/: index.js
services/front/src/services/: AuthService.js  DataProvider.js
services/front/src/store/: auth.module.js
services/front/src/views/: Login.vue  TaskList.vue
services/postgres/: create_databases.sql
services/task_admin/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  system_diagram.drawio
services/task_admin/migrations/: env.py
services/task_admin/migrations/versions/: d6609db92f3a_task_and_user_tables.py
services/task_admin/task_admin/: __init__.py  app.py  settings.py
services/task_admin/task_admin/auth/: __init__.py  models.py  schemas.py  views.py
services/task_admin/task_admin/broker/: connection.py  events.py
services/task_admin/task_admin/db/: __init__.py  connection.py  mappings.py  repository.py  tables.py  types.py
services/task_admin/task_admin/tasks/: __init__.py  models.py  schemas.py  services.py  views.py
services/task_admin/tests/: conftest.py
services/task_admin/tests/test_db/: test_mappers.py  test_task_repository.py
