[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "library.rmq_broker"
version = "0.1.0"
description = ""
authors = [ "Evgenia Kivotova",]
readme = "README.md"
[[tool.poetry.packages]]
include = "library"

[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "^8.3.0"
pytest = "^7.2.0"
marshmallow-dataclass = "^8.5.10"
