[tool.poetry]
name = "accounting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
"library.rmq_broker" = { path = "../../libraries/rmq_broker", develop = true }
python = "^3.11"
alembic = "^1.9.1"
psycopg2-binary = "^2.9.5"
fastapi = "^0.88.0"
aio-pika = "^8.2.5"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
